--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ main {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
   padding-top: 25px;
   padding: 2em;
 }
