--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,3 +129,39 @@ p{
 #drinks>h2{
   font-size: 3em;
 }
+.card {
+  width: 300px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.card-img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.card-body {
+  padding: 10px;
+}
+
+.card-title {
+  font-size: 18px;
+  margin: 0;
+}
+
+.card-text {
+  font-size: 14px;
+  margin: 10px 0;
+}
+
+.card-button {
+  display: block;
+  padding: 10px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
